# spesa

./: .gitignore  CODEX.md  LICENSE  READ.me  README.md  pyproject.toml  pyrightconfig.json  warnings.json
.github/workflows/: tests.yml
data/: consumption_observations.csv  item_quantity_overrides.csv  manual_items.csv  manual_items_template.csv  product_mapping.csv
docs/: modello_dati.md
docs/images/: social-image.png:Zone.Identifier
fixtures/: conad_base.parsed.json  conad_base.raw.json  conad_header_corrotto.raw.json  conad_header_mancante.raw.json  dok_base.raw.json
parsed_receipts_fragments/20260601_121001/: 20260601_121001.parsed.json  20260601_121006.parsed.json
scripts/: analyze_items.py  analyze_spending.py  check_price_normalization.py  enrich_items.py  export_items_csv.py  find_price_comparisons.py  generate_item_quantity_overrides.py  group_receipt_transcriptions.py  infer_product_units.py  ocr_scontrino.py  parse_scontrino_raw.py  processa_cartella.py  processa_scontrino.py
scripts/receipt_grammars/: common.py  dok.py
tests/: test_parse_scontrino_raw.py  test_processa_cartella.py
trascrizioni_fragments/20260601_121001/: 20260601_121001.json  20260601_121006.json
