[project]
name = "spesa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.1",
]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
    "ipdb>=0.13.13",
    "ipython>=9.14.1",
    "pudb>=2025.1.5",
    "pytest>=9.0.3",
]
[tool.pytest.ini_options]
pythonpath = ["."]
